--- a/test/env_files/nagios_vars.EXAMPLE
+++ b/test/env_files/nagios_vars.EXAMPLE
@@ -2,7 +2,7 @@ NAGIOS_SERVICESTATE=CRITICAL
 NAGIOS_HOSTNOTIFICATIONNUMBER=0
 NAGIOS_HOSTNOTIFICATIONID=0
 NAGIOS_ARG8=
-NAGIOS_SERVICEACKAUTHOR=nkammah
+NAGIOS_SERVICEACKAUTHOR=ops
 NAGIOS_COMMANDFILE=/usr/nagios/var/rw/nagios.cmd
 NAGIOS_ARG9=
 NAGIOS_HOSTADDRESS=10.101.194.198
@@ -40,7 +40,7 @@ NAGIOS_ARG25=
 NAGIOS_HOSTACKCOMMENT=
 NAGIOS_SERVICENOTES=
 NAGIOS_SERVICEGROUPNOTESURL=
-NAGIOS_HOSTGROUPMEMBERS=nkammah.vm.ny4dev
+NAGIOS_HOSTGROUPMEMBERS=web.example.com
 NAGIOS_NOTIFICATIONCOMMENT=
 NAGIOS_ARG4=
 NAGIOS_ARG22=
@@ -58,12 +58,12 @@ NAGIOS_ARG7=
 NAGIOS_ARG21=
 NAGIOS_SERVICEPERFDATA=/=31269MB;36287;2015;0;40319 /dev/shm=82MB;2236;124;0;2485 /data=44700860MB;54876558;3048697;0;60973954
 NAGIOS_LASTSERVICESTATE=CRITICAL
-NAGIOS_CONTACTNAME=nkammah
+NAGIOS_CONTACTNAME=ops
 NAGIOS_HOSTPERCENTCHANGE=0.00
 NAGIOS_HOSTGROUPALIAS=Test Host Group
 LD_LIBRARY_PATH=:/usr/local/lib
 NAGIOS_RESOURCEFILE=/usr/nagios/etc/resource.cfg
-NAGIOS_CONTACTGROUPMEMBERS=nkammah
+NAGIOS_CONTACTGROUPMEMBERS=ops
 NAGIOS_ARG19=
 NAGIOS_SERVICECHECKTYPE=ACTIVE
 NAGIOS_ARG18=
@@ -86,7 +86,7 @@ NAGIOS_NOTIFICATIONTYPE=PROBLEM
 NAGIOS_LASTSERVICEPROBLEMID=3
 NAGIOS_ARG12=
 NAGIOS_LASTHOSTCHECK=1368738363
-NAGIOS_ADMINPAGER=rb@etsy.com
+NAGIOS_ADMINPAGER=ops@example.com
 NAGIOS_SERVICECHECKCOMMAND=check_nrpe!check_disk
 NAGIOS_TOTALSERVICESWARNING=
 NAGIOS_LASTHOSTSTATEID=0
@@ -104,7 +104,7 @@ NAGIOS_TOTALHOSTSERVICESWARNING=0
 NAGIOS_ARG17=
 PATH=/sbin:/usr/sbin:/bin:/usr/bin
 NAGIOS_HOSTOUTPUT=PING OK - Packet loss = 0%, RTA = 0.50 ms
-NAGIOS_NOTIFICATIONRECIPIENTS=nkammah
+NAGIOS_NOTIFICATIONRECIPIENTS=ops
 NAGIOS_ARG16=
 NAGIOS_MAXHOSTATTEMPTS=1
 NAGIOS_ARG15=
@@ -124,7 +124,7 @@ NAGIOS_ARG30=
 NAGIOS_SERVICEPERFDATAFILE=
 NAGIOS_ARG32=
 LANG=en_US.UTF-8
-NAGIOS_CONTACTALIAS=Nassim Kammah
+NAGIOS_CONTACTALIAS=Ops Engineer
 NAGIOS_HOSTNOTESURL=
 NAGIOS_SERVICELATENCY=0.189
 NAGIOS_TOTALSERVICESCRITICAL=
@@ -140,13 +140,13 @@ NAGIOS_SERVICEPROBLEMID=4
 NAGIOS_HOSTCHECKTYPE=ACTIVE
 NAGIOS_HOSTGROUPNOTES=
 NAGIOS_LASTSERVICECHECK=1368738397
-NAGIOS_ADMINEMAIL=rb@etsy.com
+NAGIOS_ADMINEMAIL=ops@example.com
 NAGIOS_OBJECTCACHEFILE=/usr/nagios/var/objects.cache
 NAGIOS_HOSTLATENCY=0.163
 NAGIOS_HOSTGROUPACTIONURL=
 SHLVL=4
 NAGIOS_LONGDATETIME=Thu May 16 21:06:38 UTC 2013
-NAGIOS_HOSTDISPLAYNAME=nkammah.vm.ny4dev
+NAGIOS_HOSTDISPLAYNAME=web.example.com
 NAGIOS_SERVICESTATEID=2
 NAGIOS_SERVICENOTESURL=
 NAGIOS_TOTALSERVICEPROBLEMS=
@@ -170,10 +170,10 @@ NAGIOS_SERVICEOUTPUT=DISK CRITICAL - free space: / 7002 MB (18% inode 60%): /dat
 NAGIOS_NOTIFICATIONNUMBER=1
 NAGIOS_HOSTDURATION=11d 4h 23m 10s
 NAGIOS_MAINCONFIGFILE=/usr/nagios/etc/nagios.cfg
-NAGIOS_CONTACTEMAIL=rfrantz@etsy.com
+NAGIOS_CONTACTEMAIL=ops@example.com
 NAGIOS_SERVICESTATETYPE=HARD
 NAGIOS_LASTHOSTUNREACHABLE=0
-NAGIOS_LONGSERVICEOUTPUT=\nTHRESHOLDS - WARNING:15%;CRITICAL:20%;\n\nFilesystem            Size  Used Avail Use% Mounted on\n/dev/vda               40G   31G  6.9G  82% /\ntmpfs                 2.5G   83M  2.4G   4% /dev/shm\nnfs01.ny4dev.etsy.com:/mnt/data/homes\n                       59T   43T   16T  74% /data\n
+NAGIOS_LONGSERVICEOUTPUT=\nTHRESHOLDS - WARNING:15%;CRITICAL:20%;\n\nFilesystem            Size  Used Avail Use% Mounted on\n/dev/vda               40G   31G  6.9G  82% /\ntmpfs                 2.5G   83M  2.4G   4% /dev/shm\nnfs.example.example.com:/mnt/user/homes\n                       59T   43T   16T  74% /data\n
 NAGIOS_HOSTATTEMPT=1
 NAGIOS_HOSTNOTES=
 NAGIOS_SERVICEISVOLATILE=0
@@ -186,11 +186,11 @@ NAGIOS_HOSTPERFDATAFILE=
 NAGIOS_LASTHOSTEVENTID=0
 NAGIOS_HOSTACKAUTHORNAME=
 NAGIOS_NOTIFICATIONAUTHORNAME=
-NAGIOS_HOSTALIAS=nkammah.vm.ny4dev
+NAGIOS_HOSTALIAS=web.example.com
 NAGIOS_SERVICEDESC=Disk Space
 NAGIOS_HOSTGROUPNAME=test
 NAGIOS_PROCESSSTARTTIME=1367776508
-NAGIOS_HOSTNAME=nkammah.vm.ny4dev
+NAGIOS_HOSTNAME=web.example.com
 NAGIOS_SERVICENOTIFICATIONID=45
 NAGIOS_SERVICEACKAUTHORALIAS=
 NAGIOS_LASTSERVICESTATEID=2
