More formatter tests.
- I've left some breadcrumbs in test_formatter_base.rb to remind which tests to write tomorrow.
- Added a value for NAGIOS_SERVICEACTIONURL so that we can write a good test for Formatter#action_url.

--- a/test/env_files/nagios_vars.EXAMPLE
+++ b/test/env_files/nagios_vars.EXAMPLE
@@ -177,7 +177,7 @@ NAGIOS_LONGSERVICEOUTPUT=\nTHRESHOLDS - WARNING:15%;CRITICAL:20%;\n\nFilesystem 
 NAGIOS_HOSTATTEMPT=1
 NAGIOS_HOSTNOTES=
 NAGIOS_SERVICEISVOLATILE=0
-NAGIOS_SERVICEACTIONURL=
+NAGIOS_SERVICEACTIONURL=http://runbook.example.com/disk_space_alerts.html
 NAGIOS_SERVICEDISPLAYNAME=Disk Space
 NAGIOS_TOTALHOSTSUP=
 NAGIOS_LASTHOSTSTATECHANGE=1367772208
