--- a/etc/config.yml.example
+++ b/etc/config.yml.example
@@ -9,5 +9,6 @@ splunk:
 logstash:
   url: http://logstash.example.com:9200
   result_field_trucate: 200
+  num_results: 10
 logfile: /tmp/nagios-herald.log
 formatter_dir: /usr/local/nagios-herald-formatters
