--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: ruby
 rvm:
  - 1.9.2
+before_install:
+ - echo "gem: --no-ri --no-rdoc" >> ~/.gemrc
+before_script:
+ - bundle exec mailcatcher
