--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: ruby
 rvm:
  - 1.9.2
 before_install:
- - echo "gem: --no-ri --no-rdoc" >> ~/.gemrc
+ - echo 'gem: --no-ri --no-rdoc' >> ~/.gemrc
 before_script:
  - bundle exec mailcatcher
