--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 rvm:
  - 1.9.2
 sudo: false
+cache: bundler
 before_install:
  - "echo 'gem: --no-ri --no-rdoc' >> ~/.gemrc"
 before_script:
